mengedit favicon website

--- a/store.html
+++ b/store.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="icon" href="img/logo.png">
     <title>MBAKO JINGGO - Tempatnya Jual  Tembakau Rasa</title>
 
     <!-- Bootstrap core CSS -->
