--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
   <title>MBAKO JINGGO - Tempatnya Jual  Tembakau Rasa</title>
-  <link rel="shortcut icon" href="img/logo.png">
+  <link rel="icon" href="img/logo.png">
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
