mengedit about & products.html

--- a/about.html
+++ b/about.html
@@ -69,8 +69,8 @@
                 <span class="section-heading-upper">Strong Tobacco, Strong Roots</span>
                 <span class="section-heading-lower">About Our Mbako Jinggo</span>
               </h2>
-              <p>Didirikan pada tahun 2020 oleh Hernandez bersaudara, perusahaan kami telah menyajikan tembakau rasa kaya yang bersumber dari petani pengrajin di berbagai wilayah di Gempol. Kami berdedikasi untuk berkeliling dunia, menemukan tembakau terbaik, dan membawa Anda kembali ke sini di Mbako Jinggo.</p>
-              <p class="mb-0">Kami menjamin bahwa Anda akan jatuh <em>cinta</em> dengan berbagai rasa produk kami saat Anda mencobanya sekali saja Anda tidak akan lupa dengan rasanya. Segerahlah membeli produk kami untuk rutinitas harian Anda, bersama teman, atau sekadar menikmati waktu sendiri.</p>
+              <p>UMKM Mbakko Jinggo adalah Industri kecil tembakau rasa yang ada di desa gempol, Kecamatan gempol, Kabupaten pasuruan. Usaha Mikro Kecil dan Menengah (UMKM) ini mengolah tembakau biasa yang kemudian tembakau tersebut divariasi lagi dengan menambahkan rasa seperti coklat,vanilla,kopi,dan lain - lain.</p>
+              <!-- <p class="mb-0">Kami menjamin bahwa Anda akan jatuh <em>cinta</em> dengan berbagai rasa produk kami saat Anda mencobanya sekali saja Anda tidak akan lupa dengan rasanya. Segerahlah membeli produk kami untuk rutinitas harian Anda, bersama teman, atau sekadar menikmati waktu sendiri.</p> -->
             </div>
           </div>
         </div>
