menambah harga, mengedit navbar, mengeditstore manambah form kontak

--- a/about.html
+++ b/about.html
@@ -45,13 +45,13 @@
             </a>
           </li>
           <li class="nav-item active px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+            <a class="nav-link text-uppercase text-expanded" href="about.html">Profil UMKM</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
+            <a class="nav-link text-uppercase text-expanded" href="products.html">Produk</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
+            <a class="nav-link text-uppercase text-expanded" href="store.html">Kontak</a>
           </li>
         </ul>
       </div>
@@ -69,7 +69,7 @@
                 <span class="section-heading-upper">Strong Tobacco, Strong Roots</span>
                 <span class="section-heading-lower">About Our Mbako Jinggo</span>
               </h2>
-              <p>UMKM Mbakko Jinggo adalah Industri kecil tembakau rasa yang ada di desa gempol, Kecamatan gempol, Kabupaten pasuruan. Usaha Mikro Kecil dan Menengah (UMKM) ini mengolah tembakau biasa yang kemudian tembakau tersebut divariasi lagi dengan menambahkan rasa seperti coklat,vanilla,kopi,dan lain - lain.</p>
+              <p>UMKM “ Mbako Jinggo” adalah industri kecil tembakau rasa di desa gempol,Kecamatan gempol,Kabupaten pasuruan. Usaha Mikro Kecil dan Menengah (UMKM) yang bernama “ Mbako Jinggo” ini menyerap tenaga kerja dari lingkungan sekitar. Usaha Mikro Kecil dan Menengah (UMKM) ini mengolah tembakau biasa yang kemudian tembakau tersebut divariasi lagi dengan menambahkan rasa seperti coklat,vanilla,kopi,dan lain - lain</p>
               <!-- <p class="mb-0">Kami menjamin bahwa Anda akan jatuh <em>cinta</em> dengan berbagai rasa produk kami saat Anda mencobanya sekali saja Anda tidak akan lupa dengan rasanya. Segerahlah membeli produk kami untuk rutinitas harian Anda, bersama teman, atau sekadar menikmati waktu sendiri.</p> -->
             </div>
           </div>
