--- a/store.html
+++ b/store.html
@@ -45,13 +45,13 @@
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+              <a class="nav-link text-uppercase text-expanded" href="about.html">Profil UMKM</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
+              <a class="nav-link text-uppercase text-expanded" href="products.html">Produk</a>
             </li>
             <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
+              <a class="nav-link text-uppercase text-expanded" href="store.html">Kontak</a>
             </li>
           </ul>
         </div>
@@ -74,27 +74,27 @@
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
                   Monday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  <span class="ml-auto">7:00 AM to 4:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
                   Tuesday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  <span class="ml-auto">7:00 AM to 4:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
                   Wednesday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  <span class="ml-auto">7:00 AM to 4:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
                   Thursday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  <span class="ml-auto">7:00 AM to 4:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
                   Friday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  <span class="ml-auto">7:00 AM to 4:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
                   Saturday
-                  <span class="ml-auto">9:00 AM to 5:00 PM</span>
+                  <span class="ml-auto">7:00 AM to 4:00 PM</span>
                 </li>
               </ul>
               <p class="address mb-5">
@@ -114,7 +114,7 @@
                   <em>Call Anytime</em>
                 </small>
                 <br>
-                (0881) 8218-3212
+                +6281233662981
                 <small>
                   <br>
                   <em>Email</em>
@@ -127,6 +127,57 @@
         </div>
       </div>
     </section>
+
+
+    <section class="page-section cta">
+      <div class="container text-primary">
+        <div class="cta-inner text-center rounded">
+<!-- contact -->
+    <section class="contact" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            <h2>Contact</h2>
+            <hr>
+          </div>
+        </div>
+
+        <div class="row mx-auto">
+          <div class="col-sm-8 col-sm-offset-2">
+            <form>
+              <div class="form-group">
+                <label for="nama">Nama</label>
+                <input type="text" id="nama" class="form-control" placeholder="masukkan nama">
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" class="form-control" placeholder="masukkan email">
+              </div>
+              <div class="form-group">
+                <label for="telp">No Telepon</label>
+                <input type="tel" id="telp" class="form-control" placeholder="masukkan no telepon">
+              </div>
+              <select class="form-control">
+                <option>-- Pilih Kategori Produk--</option>
+                <option>Tembakau Kopi</option>
+                <option>Tembakau Vanilla</option>
+                <option>Tembakau Coklat</option>
+                <option>Lainnya</option>
+              </select>
+              <div class="form-group">
+                <label for="pesan">Pesan</label>
+                <textarea class="form-control" rows="4" placeholder="masukkan pesan"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Kirim Pesan</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- akhir contact -->
+</div>
+</div>
+</section>
 
     <section class="page-section cta">
       <div class="container text-primary">
@@ -150,8 +201,8 @@
                   <span class="section-heading-upper">Strong Tobacco, Strong Roots</span>
                   <span class="section-heading-lower">About Our Mbako Jinggo</span>
                 </h2>
-                <p>Didirikan pada tahun 2020 oleh Hernandez bersaudara, perusahaan kami telah menyajikan tembakau rasa kaya yang bersumber dari petani pengrajin di berbagai wilayah di Gempol. Kami berdedikasi untuk berkeliling dunia, menemukan tembakau terbaik, dan membawa Anda kembali ke sini di Mbako Jinggo.</p>
-                <p class="mb-0">Kami menjamin bahwa Anda akan jatuh <em>cinta</em> dengan berbagai rasa produk kami saat Anda mencobanya sekali saja Anda tidak akan lupa dengan rasanya. Segerahlah membeli produk kami untuk rutinitas harian Anda, bersama teman, atau sekadar menikmati waktu sendiri.</p>
+                <p>UMKM “ Mbako Jinggo” adalah industri kecil tembakau rasa di desa gempol,Kecamatan gempol,Kabupaten pasuruan. Usaha Mikro Kecil dan Menengah (UMKM) yang bernama “ Mbako Jinggo” ini menyerap tenaga kerja dari lingkungan sekitar. Usaha Mikro Kecil dan Menengah (UMKM) ini mengolah tembakau biasa yang kemudian tembakau tersebut divariasi lagi dengan menambahkan rasa seperti coklat,vanilla,kopi,dan lain - lain</p>
+                <!-- <p class="mb-0">Kami menjamin bahwa Anda akan jatuh <em>cinta</em> dengan berbagai rasa produk kami saat Anda mencobanya sekali saja Anda tidak akan lupa dengan rasanya. Segerahlah membeli produk kami untuk rutinitas harian Anda, bersama teman, atau sekadar menikmati waktu sendiri.</p> -->
               </div>
             </div>
           </div>
