--- a/store.html
+++ b/store.html
@@ -120,7 +120,7 @@
                   <em>Email</em>
                 </small>
                 <br>
-                <a href="mailto:#">mbako.jinggo@example.com</a>
+                <a href="mailto:mbako.jinggo@hotmail.com">mbako.jinggo@hotmail.com</a>
               </p>
             </div>
           </div>
@@ -192,7 +192,7 @@
 
     <section class="page-section about-heading">
       <div class="container">
-        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" style="size: 1200x400;" src="img/about.jpg" alt="">
+        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" style="size: 1200x400;" src="img/1.png" alt="">
         <div class="about-heading-content">
           <div class="row">
             <div class="col-xl-9 col-lg-10 mx-auto">
