menghilangkan about di store.html, manambah harga+diskripsi,gambar slide di index.html

--- a/itemdua.html
+++ b/itemdua.html
@@ -74,7 +74,7 @@
           </div>
         </div>
         <!-- /.card -->
-
+<!-- 
         <div class="card card-outline-secondary my-4">
           <div class="card-header bg-primary text-light">
             <b>Product Reviews</b>
@@ -91,7 +91,7 @@
             <hr>
             <a href="#" class="btn btn-primary">Lainnya</a>
           </div>
-        </div>
+        </div> -->
         <!-- /.card -->
 
       </div>
