--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-          <img class="d-block img-fluid" src="http://placehold.it/1200x450" alt="First slide">
+          <img class="d-block img-fluid" src="img/1.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="http://placehold.it/1200x450" alt="Second slide">
+          <img class="d-block img-fluid" src="img/1.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="http://placehold.it/1200x450" alt="Third slide">
+          <img class="d-block img-fluid" src="img/3.jpg" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -112,8 +112,8 @@
             <h4 class="card-title">
               <a class="text-primary" href="itemsatu.html">Tembakau Kopi</a>
             </h4>
-            <h5>Rp ----</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+            <h5>Rp 50.000,-</h5>
+            <p class="card-text">Tembakau dengan campuran <em>kopi</em>, dibuat dengan bahan pilihan dan diracik oleh para ahli.</p>
           </div>
           <div class="card-footer">
             <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -128,8 +128,8 @@
             <h4 class="card-title">
               <a class="text-primary" href="itemdua.html">Tembakau Vanilla</a>
             </h4>
-            <h5>Rp ----</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+            <h5>Rp 50.000,-</h5>
+            <p class="card-text">Tembakau dengan rasa <em>vanilla</em>, menciptakan aroma dan rasa manis manis yang khas</p>
           </div>
           <div class="card-footer">
             <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -144,8 +144,8 @@
             <h4 class="card-title">
               <a class="text-primary" href="itemtiga.html">Tembakau Coklat</a>
             </h4>
-            <h5>Rp ----</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+            <h5>Rp 50.000,-</h5>
+            <p class="card-text">Tembakau Rasa <em>coklat</em>, berasal dari biji kakao yang kalau dicicipi terasa pahit.</p>
           </div>
           <div class="card-footer">
             <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
