--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <img class="d-block img-fluid" src="img/1.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="img/3.jpg" alt="Third slide">
+          <img class="d-block img-fluid" src="img/Mbakko Jinggo Logo.png" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
