--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
+        <!-- <div class="carousel-item active">
           <img class="d-block img-fluid" src="img/1.jpg" alt="First slide">
-        </div>
+        </div> -->
         <div class="carousel-item">
           <img class="d-block img-fluid" src="img/1.png" alt="Second slide">
         </div>
