--- a/itemsatu.html
+++ b/itemsatu.html
@@ -62,7 +62,7 @@
       <div class="col-lg-12">
 
         <div class="card mt-4">
-          <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt="">
+          <img class="card-img-top img-fluid" src="img/2.jpg" alt="">
           <div class="card-body">
             <h3 class="card-title">Tembakau Kopi</h3>
             <h4>Rp 50.000,-</h4>
