--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <!-- <li data-target="#carouselExampleIndicators" data-slide-to="2"></li> -->
       </ol>
       <div class="carousel-inner" role="listbox">
-        <!-- <div class="carousel-item active">
-          <img class="d-block img-fluid" src="img/1.jpg" alt="First slide">
+        <div class="carousel-item active">
+          <img class="d-block img-fluid" src="img/1.png" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="img/Mbakko Jinggo Logo.png" alt="Second slide">
+        </div>
+        <!-- <div class="carousel-item">
+          <img class="d-block img-fluid" src="" alt="Third slide">
         </div> -->
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="img/1.png" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="img/Mbakko Jinggo Logo.png" alt="Third slide">
-        </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
