--- a/itemsatu.html
+++ b/itemsatu.html
@@ -70,7 +70,7 @@
             <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
             4.0 stars
             <hr>
-            <a href="#" class="btn btn-success">BELI</a>
+            <a href="mbakojinggo.github.io/order" class="btn btn-success">BELI</a>
           </div>
         </div>
         <!-- /.card -->
